Wed Feb 21 01:24:52 2001  Jonathan Blandford  <jrb@redhat.com>

	* menu.c: Added Matthew Wilcox to about box.

Tue Feb 20 19:21:12 2001  Rosanna Yuen  <zana@webwynk.net>

	* monte_carlo.scm: added a new game
	* neighbor.scm: fixed screen size problem

Tue Feb 20 17:19:28 2001  Rosanna Yuen  <zana@webwynk.net>

	* thirteen.scm (new-game): fixed screen size problem (bug 3087)

Tue Feb 20 17:13:46 2001  Rosanna Yuen  <zana@webwynk.net>

	* spider.scm (get-hint): got around the premature end-of-game call
	by never letting the game end naturally.

Tue Feb 20 16:17:37 2001  Rosanna Yuen  <zana@webwynk.net>

	* gypsy.scm: added a new game

Mon Feb 19 17:06:50 2001  Rosanna Yuen  <zana@webwynk.net>

	* maze.scm: Matthew Wilcox's new maze version; fixes undo and
	scoring.

Mon Feb 19 03:53:39 2001  Rosanna Yuen  <zana@webwynk.net>

	* lady_jane.scm (get-hint): implemented hints for this game.
	about bloody time...

Sun Feb 18 19:31:19 2001  Rosanna Yuen  <zana@webwynk.net>

	* glenwood.scm: added a new game for gleblanc 

Sat Feb 17 23:34:16 2001  Jonathan Blandford  <jrb@redhat.com>

	* sol.c (new_game): Fixed bugs #7033 and #5324.

Sat Feb 10 15:34:14 2001  Rosanna Yuen  <zana@webwynk.net>

	* thieves.scm (button-clicked): Fixed bug #20352 which caused
	crashing when empty slot was clicked.

2001-02-09  Gregory Leblanc <gleblanc@cu-portland.edu>

	* docs/aisleriot.sgml: Updated for and tested in nautilus (nope,
	it doesn't work properly.)

Tue Feb 06 20:26:42 2001  George Lebl <jirka@5z.com>

	* dialog.c:  close old hint dialog when new dialog is made, and
	  use printf style strings rather then appending strings together,
	  and lastly, free allocated memory.

Tue Feb 06 17:47:06 2001  George Lebl <jirka@5z.com>

	* splash.c: fix further splash destroyed too early fun and fix
	  multiple exposes causing quit fun, or destroyed before expose
	  race hang fun.

Tue Feb 06 16:49:12 2001  George Lebl <jirka@5z.com>
