@@ -1,3 +1,8 @@
+Wed Feb 21 02:34:09 2001  Rosanna Yuen  <zana@webwynk.net>
+
+	* bakers_dozen.scm: added a new game
+	* monte_carlo.scm: fixed a hint bug
+	
 Wed Feb 21 01:24:52 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* menu.c: Added Matthew Wilcox to about box.
